# funcie

./: README.md  makefile  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yaml
docs/: api.md  index.md
funcie/: __init__.py  collections.py  composition.py  core.py  curry.py  predicate.py
tests/: test_collections.py  test_composition.py  test_curry.py  test_exports.py  test_predicate.py
